# CrystalPropLLM

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
crystalpropllm/: __init__.py  _model.py  _tokenizer.py  _utils.py  spacegroups.txt
